# vtmfun

./: .gitignore  Dockerfile  Procfile  README.md  pcconfig.py  pyproject.toml
vtmfun/: base_state.py  pcconfig.py  route.py  vtmfun.py
vtmfun/components/: __init__.py  sidebar.py
vtmfun/pages/: __init__.py  beasty.py  splitter.py
vtmfun/templates/: __init__.py  webpage.py
