[tool.poetry]
name = "vtmfun"
version = "0.1.0"
description = "Various web utilities for VtM"
authors = ["tiltowait <208040+tiltowait@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynecone = "^0.1.24"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"
python-lsp-server = {extras = ["all"], version = "^1.7.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
